[BUGFIX] Gap between module menu items causes collapse on click
Transform the margins between entries in the module menu into paddings
to avoid that clicks on this margin cause collapsing of the menu
section.

Resolves: #27634
Releases: 4.6, 4.5
Reviewed-on: http://review.typo3.org/7126
Tested-by: Georg Ringer

--- a/typo3/sysext/t3skin/stylesheets/structure/module_menu.css
+++ b/typo3/sysext/t3skin/stylesheets/structure/module_menu.css
@@ -19,11 +19,14 @@ $Id$
 
 #typo3-menu li {
 	clear: both;
-	margin-bottom: 1px;
+	padding-bottom: 1px;
+	margin-bottom: 0;
 }
 
 #typo3-menu li a {
 	display: block;
+	padding-bottom: 1px;
+	margin-bottom: 0;
 }
 
 #typo3-menu li img {
